<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_music"
            android:icon="@mipmap/ic_music_note_black_48dp"
            android:title="@string/music_my_music" />
        <item
            android:id="@+id/nav_play_list"
            android:icon="@mipmap/ic_queue_music_black_48dp"
            android:title="@string/music_play_list" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@mipmap/ic_folder_black_48dp"
            android:title="@string/music_folder" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@mipmap/ic_favorite_black_48dp"
            android:title="@string/music_favorite" />
        <item
            android:id="@+id/nav_recent_play"
            android:icon="@mipmap/ic_watch_later_black_48dp"
            android:title="@string/music_recent_play" />
        <item
            android:id="@+id/nav_recent_add"
            android:icon="@mipmap/ic_add_box_black_48dp"
            android:title="@string/music_recent_add" />
        <item
            android:id="@+id/nav_play_ranking"
            android:icon="@mipmap/ic_sort_black_48dp"
            android:title="@string/music_play_ranking" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/ic_settings_black_48dp"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@mipmap/ic_exit_to_app_black_48dp"
            android:title="@string/exit" />
    </group>
</menu>
